eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yui-api-deployment
  labels:
    app: yui-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yui-api
  template:
    metadata:
      labels:
        app: yui-api
    spec:
      containers:
      - name: yui-api
        image: 088497697696.dkr.ecr.ap-southeast-1.amazonaws.com/yui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
