eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yui-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "api.arbotante.click"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: yui-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.arbotante.click
    secretName: yui-api-cert
